[metadata]

name = spaceshooter
version = %TAG%
author = Marcin Bielewicz
author_email = marcin.bielewicz@gmail.com
description = Simple spaceshooter game that uses PySide library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://iostream.pl/spaceshooter-en
project_urls =
    Bug Tracker = https://github.com/lvajxi03/spaceshooter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
license = GPL

[options]
package_dir =
    = pysrc
packages = find:
python_requires = >= 3.8
include_package_data = True

[options.packages.find]
where = pysrc

[options.package_data]
spaceshooter = images/*.png
